--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "antd": "^4.18.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
